# HealthChatAgent

./: IFLOW.md  README.md  pyproject.toml  pytest.ini
app/: main.py
app/api/: chat.py  users.py
app/db/: models.py  session.py
app/runtime/: flow.py
app/runtime/nodes/: deepseek.py  history.py  iflow.py  persist.py  qwen.py  reply_extract.py  triage.py  urgent_advice.py
app/schemas/: chat.py  patient.py
app/services/: deepseek_client.py  qwen_client.py  repo.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css
test/: test_flow.py
test/test_nodes/: test_deepseek.py  test_history.py  test_iflow.py  test_persist.py  test_reply_extract.py  test_triage.py  test_urgent_advice.py
test/test_services/: test_repo.py
