[project]
name = "healthchatagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.120.3",
    "httpx>=0.28.1",
    "pocketflow>=0.0.3",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
